tests/NormalTests/paczka2/big_fuzzy/41868473.err
Error in line 3: aS9iklmi5BY A190 78,73
Error in line 5: aS9iklmi5BY A190 372,7
Error in line 9: A'90 S527 0,6
Error in line 1: A190 S342 94,0
Error in line 17: 1tEbb5Nqs A190 76,9
Error in line 19: A190 S527 2,2
Error in line 16: cZAkbZ A214 9,8
Error in line 34: cZAkbZ S342 129,21
Error in line 40: EGRx3rW A190 22,4
Error in line 41: EGRx3rW S527 30,3
Error in line 28: aS9iklmi5BY S342 0,0
Error in line 49: aS9iklmi5BY A190 31,3
Error in line 54: WXxbCA A214 96,9
Error in line 38: uxNBCS1ACN A190 34,3
Error in line 66: EGRx3rW S527 9,2
Error in line 67: cZAkbZ S342 8,3
Error in line 55: WXxbCA S342 38,3
Error in line 75: cZAkbZ A214 186,2
Error in line 81: 1tEbb5Nqs S342 46,3
Error in line 84: 1tEbb5Nqs S527 59,0
Error in line 102: WXxbCA S527 210,8
Error in line 106: 1tEbb5Nqs A190 24,4
Error in line 109: 1tEbb5Nqs A190 63,5
Error in line 90: EGRx3rW S342 247,2
Error in line 110: 1tEbb5Nqs S527 20,7
Error in line 115: uxNBCS1ACN S342 59,2
Error in line 114: A190 S342 334,6
Error in line 128: A190 A214 72,1
Error in line 158: EGRx3rW S342 31,6
Error in line 157: uxNBCS1ACN S527 51,2
Error in line 159: cZAkbZ A214 49,6
Error in line 169: EGRx3rW A214 -1,8
Error in line 171: WXxbCA A190 97,0
Error in line 167: uxNBCS1ACN A214 64,4
Error in line 185: WXxbCA A214 51,6
Error in line 196: WXxbCA S527 26,4
Error in line 201: WXxbCA S342 415,24
Error in line 160: EGRx3rW A214 6,3
Error in line 242: EGRx3rW S342 25,7
Error in line 231: aS9iklmi5BY A214 11,1
